style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Karla', sans-serif;
    font-family: 'Open Sans', sans-serif;
    font-family: 'Roboto', sans-serif;
    font-family: 'Smythe', cursive;
    font-family: 'Source Sans Pro', sans-serif;
}
.container{
    width: 90%;
    margin: 0 auto;
}
header{
    font-family: 'Source Sans Pro', sans-serif;
    font-size:  0.75rem;
    padding: 1em 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
    line-height: 15px;
    text-transform: uppercase;
}
header ul{
    list-style: none;
    display: flex;
    gap: 2em;
}
img[src="images/logo.png"]{
    max-width: 200px;
    width: 35vw ;
}
.my-grid{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, auto));
    grid-gap: 4em ;
    align-items: baseline;
}
.blog img{
    height: 50%;
    width: 100%;
    object-fit: cover;

}
.my-journey{
    background-image: url("images/macbook.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: 50% 50%;
    color:#FFFFFF;
    padding: 3.5em 0em 1.5em 0em;
}
.my-journey h1{
    font-weight: 700;
    margin: .2em 0;
}
.p-typography{
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 1rem;
    font-weight: 400;
    line-height: 20px;
    color: #505050;
}
.p-typography a{
    color: red;
}
.blog{
    margin-top: 2em;
}
.date{
    margin:  0.5625em 0 0.875em 0;
}
.blog-title{
    margin-bottom: 0.5625em;
}
@media (min-width:750px){
    header li{
        font-size:  .95rem;
    }
    .container{
        max-width: 1389px;
    }
    .my-journey{
        max-width: 1389px;
        height: 43vh;
        display: flex;
        justify-content: flex-end;
        padding-bottom: 4em ;
        flex-direction: column;
        margin: 0 auto;
    }
    .my-journey p{
        max-width: 500px;
    }
    .blog img{
        height: 50%;
        max-height: 246px ;
        width: 100%;
        max-width: 420px ;
    }
}
#view-more{
    text-align: center;
    margin: 2em 0em;
}
footer{
    text-align: center;
    margin-top: 3.125em;
    padding: 2em;
    color: white;
    background-color: black;
    align-items: center;
}

